
 XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 14 (2003.12.31):

- Many new configurable things: auto start roms, preview
images directory, history, etc. ^_^
- XGngeo still usable while running Gngeo (game may be
stopped from interface).
- Some interface improvement.
- XGngeo can now be run from any location without problem
(images not loaded, etc.). ^^
- Full support of GGF's xml file to get rom informations.
- Updated documentation.
- A small source code clean-up. :p


* Changes in version 13 (2003.11.23):

- New configurable options: Neo Geo type (arcade or home),
country and interpolation.
- Display of the Gngeo version used, in the "about" window.
- Now, in the Roms list, only available roms are shown by
default.
- New Portuguese translation by Paulo Eduardo Chiva.
- Updated documentation.


* Changes in version 12 (2003.10.25):

- Added a (amazing ^o^) keys configurator!
- Added an Audio section to the configuration... ^_^
- Move of the "lang/" directory into the brand new "data/" 
directory ^^
- Move of images into "data/img/".


* Changes in version 11 (2003.09.25):

- New "History" menu which allow you to load one of last 
5 roms loaded. ^^
- A "Configuration error!" dialog appear if some parameters
looks strange :p
- Bigger (+10px!) main window's width.
- New Polish translation of XGngeo by Matma.
- New configurable option: Auto Frameskip.
- Added a documentation in pdf format (into "doc/").
- New localized README files: README-fr.txt; README-es.txt and
README-pl.txt.
- The "fronted" word that reapered from the hell ought to be
corrected now!


* Changes in version 10 (2003.09.06):

- Ability to browse to set romrc and libGL.so paths easyly.
- Now the file selector open into the last specified
directory :p
- Added support for Internationalization! Yeah!
XGngeo is now aviable in English, French and Spanish. ^^
- New configurable option: Show FPS.


* Changes in version 9 (2003.08.25):

- New Graphic's configurable option: Scale (1 to 5).