@@ -61,7 +61,7 @@ XGngeo's configuration file uses the same syntax than Gngeo's."""
 	def write(self,gngeoDict,xgngeoDict,version):
 		#Top comments :p	
 		gngeoContent = "# Gngeo configuration file.\n\
-# Generated by XGngeo version %i (http://choplair.tuxfamily.org/) ^o^\n\
+# Generated by XGngeo version %i (http://www.choplair.org/) ^o^\n\
 \n" % version
 		xgngeoContent = "# XGngeo configuration file.\n\
 # This file is dedicated to customize XGngeo's own features. ^o^\n\
